# spdl

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  CITATION  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  coro_test.cpp  debug.py  debug.sh  foo.cpp  index.html  mkdocs.yml  pyproject.toml  ruff.toml  setup.py
packaging/: Dockerfile  audit_wheel.sh  build_pypi.sh  build_wheel.sh  build_wheels.sh  pyproject.toml  repair_wheel.sh  repair_wheels.sh  requirements.txt  run_wheel_builds.sh  vc_env_helper.bat
packaging/conda/: build.sh  meta.yaml
packaging/spdl_core/: pyproject.toml  setup.py
packaging/spdl_io/: pyproject.toml  setup.py
src/: CMakeLists.txt
src/_cmake/: spdl_common_config.cmake
src/binding/: CMakeLists.txt  bind.cpp
src/binding/core/: adaptors.cpp  buffer.cpp  conversion.cpp  decoding.cpp  demuxing.cpp  encoding.cpp  frames.cpp  gil.h  packets.cpp  tracing.cpp  transfer.cpp  utils.cpp
src/core/: setup.py
src/core/spdl/pipeline/: _bg_consumer.py  _convert.py  _pipeline.py  _utils.py
src/core/spdl/source/: __init__.py  _type.py  utils.py
src/io/: CMakeLists.txt  setup.py
src/io/cmake/: check_cxx_coroutine.cmake
src/io/libspdl/: CMakeLists.txt
src/io/libspdl/core/: buffer.h  conversion.h  transfer.cpp  types.h  utils.h
src/io/spdl/io/: __init__.py  _array.py  (+4 more)
src/libspdl/: CMakeLists.txt  README.md  buffer.cpp  buffer.h  buffers.cpp  buffers.h  common.h  conversion.cpp  conversion.h  decoding.cpp  decoding.h  defs.cpp  defs.h  frames.cpp  frames.h  interface.cpp  interface.h  processors.cpp  processors.h  storage.cpp  storage.h  types.h  utils.cpp  utils.h
src/libspdl/common/: logging.cpp  logging.h  tracing.h
src/libspdl/core/: CMakeLists.txt  adaptor.h  adoptor.h  bsf.cpp  bsf.h  buffer.cpp  buffer.h  buffers.cpp  buffers.h  codec.cpp  codec.h  conversion.cpp  conversion.h  cuda.cpp  cuda.h  decoder.cpp  decoder.h  decoding.cpp  decoding.h  demuxing.cpp  demuxing.h  encoder.cpp  encoder.h  encoding.cpp  encoding.h  executor.cpp  executor.h  filter_graph.cpp  filter_graph.h  frame_arena.cpp  frame_arena.h  frames.cpp  frames.h  future.cpp  future.h  generator.h  interface.cpp  interface.h  logging.cpp  logging.h  (+14 more)
src/libspdl/coro/: conversion.cpp  conversion.h  decoding.h  demuxing.cpp  demuxing.h  encoding.cpp  encoding.h  executor.cpp  executor.h  future.cpp  future.h
src/libspdl/cuda/: CMakeLists.txt  buffer.cpp  buffer.h  color_conversion.cpp  color_conversion.h  decoding.cpp  decoding.h  storage.cpp  storage.h  transfer.cpp  transfer.h  types.h  utils.cpp  utils.h
src/libspdl/detail/: conversion.cpp  conversion.h  cuda.cpp  cuda.h  demuxer.cpp  demuxer.h  executors.cpp  packets.cpp  packets.h
src/libspdl/ffmpeg/: ctx_utils.cpp  ctx_utils.h  cuda.cpp  cuda.h  filter_graph.cpp  filter_graph.h  logging.h  utils.cpp  utils.h  wrappers.cpp  wrappers.h
src/libspdl/interface/: interface.cpp  interface.h  mmap.cpp  mmap.h
src/libspdl/tests/: CMakeLists.txt  packets_serialization_test.cpp  rational_utils_test.cpp  smoke_test.cpp
src/prototypes/: CMakeLists.txt  async_dataloader.py  async_image_dataloader.py  async_video_dataloader.py  audio_dataloading.py  benchmark.py  benchmark_dali.py  benchmark_image_dataloading.py  benchmark_pin_memory.py  concurrent_image_dataloader.py  coro_generator.cpp  dataset.py  gen.py  image_classification_test.py  image_dataloading.py  image_encoding.cpp  image_encoding.py  imagenet_classification.py  nvjpeg.py  plot_media.py  proto.cpp  proto.py  pytorch_dataloader.py  pytorch_dataloader_test.py  streaming_demux.py  test_numba.py  test_nvdec.py  tiktoken.py  torchvision_imagenet_dataset.py  torchvision_imagenet_dataset_native.py  video_dataloading.py
src/prototypes/dataset/: __init__.py  _dataset.py  _sql.py  _utils.py  imagenet.py  kinetics.py
src/pybind/: CMakeLists.txt  core.cpp  pybind.cpp
src/pybind/core/: adaptors.cpp  adoptors.cpp  conversion.cpp  decoding.cpp  demuxing.cpp  executor.cpp  frames_and_buffers.cpp  future.cpp  packets.cpp  results.cpp  tracing.cpp  utils.cpp
src/python/: CMakeLists.txt  bind.cpp
src/python/core/: buffer.cpp  conversion.cpp  decoding.cpp  demuxing.cpp  encoding.cpp  executor.cpp  frames.cpp  frames_and_buffers.cpp  future.cpp  packets.cpp  streaming_decoder.cpp  tracing.cpp  transfer.cpp  types.cpp  utils.cpp
src/python/coro/: conversion.cpp  decoding.cpp  demuxing.cpp  encoding.cpp  executor.cpp  future.cpp
src/pytorch_spdl/: dataloader.py
src/spdl/: __init__.py  __main__.py  _async.py  _convert.py  libspdl.py  utils.py
src/spdl/_internal/: __init__.py  import_utils.py
src/spdl/autoresearch/: README.md  __init__.py  __main__.py  _prompts.py
src/spdl/dataloader/: __init__.py  _bg_consumer.py  _bg_generator.py  _bg_task_executor.py  _builder.py  _cache_dataloader.py  _convert.py  _dataloader.py  _flist.py  _hook.py  _iterators.py  _legacy_pipeline.py  _pipeline.py  _pytorch_dataloader.py  _task_runner.py  _torch.py  _utils.py
src/spdl/dataset/: __init__.py  _dataset.py  _sql.py  _utils.py  imagenet.py  kinetics.py  librispeech.py
src/spdl/io/: __init__.py  __init__.pyi  _array.py  _async.py  _common.py  _composite.py  _concurrent.py  _config.py  _convert.py  _core.py  _encoding.py  _misc.py  _preprocessing.py  _sync.py  _tar.py  _transfer.py  _type_stub.py  _types.py  _wav.py  _zip.py  preprocessing.py
src/spdl/lib/: CMakeLists.txt  __init__.py  _libspdl.pyi  io.cpp
src/spdl/pipeline/: README.md  __init__.py  _bg_task.py  _build.py  _builder.py  _config.py  _convert.py  _defs.py  _executor_proxy.py  _fuse.py  _hook.py  _iter_utils.py  _node.py  _pgrp_stats.py  _pipeline.py  _priority_executor.py  _priority_interpreter_executor.py  _profile.py  _queue.py  _random_seed.py  _scheduler.py  _subprocess_pipeline_pool.py  _subprocess_worker_pool.py  _utils.py  config.py
src/spdl/source/: __init__.py  _sampler.py  _type.py  imagenet.py  local_directory.py  utils.py
src/spdl/utils/: __init__.py  _async.py  _build.py  _ffmpeg.py  _flist.py  _folly.py  _futures.py  _tracing.py
(+1771 files in other folders)
