[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "ninja",
    "cmake>=3.24",
]
build-backend = "setuptools.build_meta"

[tool.ruff]

extend-exclude = [
  "setup.py",
  "docs/source",
  "third_party",
  "setup.py",
]

[tool.ruff.lint]
extend-select = [
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "T20",  # flake8-print
]

# Note: These settings are picked to match meta-internal linting
[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
default-section = "first-party"
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"examples/**" = ["T20"]
