[project]
name = "spdl"
authors = [
    { name = "Moto Hira", email = "moto@meta.com" },
]
readme = "README.md"
description = "Scalable and Performant Data Loading"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "spdl_io",
  "spdl_core",
]

[project.urls]
Documentation = "https://facebookresearch.github.io/spdl/main/index.html"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.package-data]
spdl = ["py.typed"]

[tool.uv.sources]
spdl_core = { workspace = true }
spdl_io = { workspace = true }

[tool.uv.workspace]
members = [
  "packaging/spdl_core",
  "packaging/spdl_io",
]
