[project]
name = "spdl_core"
authors = [
    { name = "Moto Hira", email = "moto@meta.com" },
]
readme = "README.md"
description = "SPDL: Scalable and Performant Data Loading."
license = "BSD-2-Clause"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">= 3.10"

[project.urls]
Documentation = "https://facebookresearch.github.io/spdl/main/index.html"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"
