[project]
name = "spdl_io"
authors = [
    { name = "Moto Hira", email = "moto@meta.com" },
]
readme = "README.md"
description = "SPDL plugin for loading media data into array format."
license = "BSD-2-Clause"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "numpy >= 1.21"
]

[project.urls]
Documentation = "https://facebookresearch.github.io/spdl/main/index.html"

[build-system]
requires = [
    "setuptools>=77.0.0",
    "typing_extensions",
    # Note: We used to specify these and let the build backend fetch the
    # tools, however with uv they goes to a temporary directory which is
    # not available in the subsequent build attempts, which gives pretty
    # bad UX for local development, so we decided to exclude them.
    # "ninja",
    # "cmake>=3.24",
]
build-backend = "setuptools.build_meta"
